appId: com.serhiiqa.TicTac
---
- launchApp
- assertVisible: "Tic Tac Toe"
- tapOn:
    point: 22%,38%
- tapOn:
    point: 50%,38%
- tapOn:
    point: 50%,50%
- tapOn:
    point: 78%,50%
- tapOn:
    point: 78%,63%
- assertVisible: "🏆 Player X wins!"
- tapOn: "PLAY AGAIN"
- assertVisible: "X: 1 | O: 0"
- tapOn: "Dark Mode"
- assertVisible: "Light Mode"
- assertVisible: "©2025 Created by Serhii Sukhomlin"
